force-app/main/default/objects/TriggerSettings__c/TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used in Apex triggers to logically disable triggers. This is especially useful in production where triggers can&apos;t be disabled.</description>
    <label>Trigger Settings</label>
</CustomObject>