force-app/main/default/objects/TriggerSettings__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is account trigger on?</description>
    <inlineHelpText>Is account trigger on?</inlineHelpText>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>