force-app/main/default/objects/TriggerSettings__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is opportunity trigger on?</description>
    <inlineHelpText>Is opportunity trigger on?</inlineHelpText>
    <label>Opportunity</label>
    <type>Checkbox</type>
</CustomField>