force-app/main/default/objects/TriggerSettings__c/fields/opportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>opportunityLineItem__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is opportunity Line Item trigger on?</description>
    <inlineHelpText>Is opportunity Line Item trigger on?</inlineHelpText>
    <label>Opportunity Line Item</label>
    <type>Checkbox</type>
</CustomField>