force-app/main/default/objects/TriggerSettings__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is price trigger on?</description>
    <inlineHelpText>Is price trigger on?</inlineHelpText>
    <label>Price</label>
    <type>Checkbox</type>
</CustomField>