force-app/main/default/objects/TriggerSettings__c/fields/quote__c.field-meta.xml
<CustomField>
    <fullName>quote__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is quote trigger on?</description>
    <inlineHelpText>Is quote trigger on?</inlineHelpText>
    <label>Quote</label>
    <type>Checkbox</type>
</CustomField>