force-app/main/default/objects/TriggerSettings__c/fields/quoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>quoteLineItem__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is quote line item trigger on?</description>
    <inlineHelpText>Is quote line item trigger on?</inlineHelpText>
    <label>Quote Line Item</label>
    <type>Checkbox</type>
</CustomField>