force-app/main/default/objects/TriggerSettings__c/fields/sampleFulfillment__c.field-meta.xml
<CustomField>
    <fullName>sampleFulfillment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is sample fulfillment trigger on?</description>
    <inlineHelpText>Is sample fulfillment trigger on?</inlineHelpText>
    <label>Sample Fulfillment</label>
    <type>Checkbox</type>
</CustomField>