force-app/main/default/objects/TriggerSettings__c/fields/specification__c.field-meta.xml
<CustomField>
    <fullName>specification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is specification trigger on?</description>
    <inlineHelpText>Is specification trigger on?</inlineHelpText>
    <label>Specification</label>
    <type>Checkbox</type>
</CustomField>