force-app/main/default/objects/TriggerSettings__c/fields/supplychain__c.field-meta.xml
<CustomField>
    <fullName>supplychain__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Supply Chain</label>
    <type>Checkbox</type>
</CustomField>